# uas_risk_analysis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data_analysis/: .gitignore  README.md  data_analysis_aws_glue_pyspark_example.ipynb  data_analysis_local_pyspark_example.ipynb  uas_risk_analysis_pyspark_eda.ipynb  uas_risk_analysis_viz.ipynb
data_curation/: curate_datasets.ipynb  requirements.txt
data_curation/datasets/airports/: airports.csv
data_curation/datasets/uas_sightings_reports/raw/: FY2018_Q2_UAS_Sightings.xlsx  FY2019_Q4_UAS_Sightings.xlsx
data_curation/datasets/uas_sightings_reports/zero_shot/: uas_sightings.csv  uas_sightings.parquet
data_curation/get_flight_data/: .gitignore  default.env  get_flight_data.py
data_curation/templates/: uas_sightings_llm_prompt.txt
mockups/: data_stack_diagram.drawio
open_sky_api_demo/: open_sky_api_demo.ipynb
pyopensky-demo/: pyopensky_demo.ipynb
src/uas_risk_analysis_packages/: eda.py
src/uas_risk_analysis_packages/ml/: functions.py
